--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,7 +38,8 @@
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.1",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "typewriter-effect": "^2.21.0"
   }
 }
